acmdeployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: dotnetexample
  name: dotnetexample
spec:
  replicas: 1
  selector:
    matchLabels:
      name: dotnetexample
  template:
    metadata:
      labels:
        name: dotnetexample
    spec:
      containers:
      - image: quay.io/ryan_nix/dotnetexample:latest
        name: dotnetexample
        ports:
        - containerPort: 8080
          name: http-server
