acmdeployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnetexample
  labels:
    name: dotnetexample
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    name: dotnetexample
