acmdeployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dotnetexample
  labels:
    name: dotnetexample
spec:
  path: "/"
  tls:
    termination: edge
  to:
    kind: Service
    name: dotnetexample
